--- a/gb/24/6/4/n14263630.md
+++ b/gb/24/6/4/n14263630.md
@@ -7,50 +7,49 @@
 </h6>
 <hr>
 	<p>【大纪元2024年06月04日讯】（大纪元记者方晓报导）“海银财富”（简称“海银”）爆雷，一夜之间716亿（人民币，下同）资金蒸发，逾4.6万名投资者的钱灰飞烟灭。最新的报导表示，海银的很多投资产品都是虚构出来的，压根就不存在，用来募集资金的公司几十家都是空壳公司。对此，专家和民间均质疑：监管何在？为何中国的财富管理公司频频爆雷？</p>
-<p>和“中植集团”、“诺亚财富”并列中国前三大财富管理平台的“海银财富”，去年12月无预警崩盘。</p>
+<p>和“中植集团”“诺亚财富”并列中国前三大财富管理平台的“海银财富”，去年12月无预警崩盘。</p>
 <p>中植系和诺亚爆雷的阴影还没有退去，海银财富爆雷，已经5个多月没有兑付理财产品的钱，涉及资金超700亿。</p>
 <p>《证券时报》近日报导，经追查发现，海银财富所贩售的465项理财商品“全数违规”，投资标的底层资产“全属捏造”，实际手法是通过建立22家空壳公司，将4.6万投资人的财富打入这些公司账户，接着打造一个资金池，再通过“伪金交所”登记备案，最终有716.9亿元不知去向。</p>
 <p>报导说，调查的结果主要包括三种情况：第一种是底层资产完全虚构捏造，无法向底层公司主张权利；第二种是与底层公司合同、资金已经两清，底层资产也已不存在；第三种是大规模的超募，底层融资方获得的资金远低于产品募资额，因此能向底层公司主张的权利非常有限。</p>
-<p>至此，海银财富的运作模式全面浮出水面。在销售端，海银依靠分布于90余个城市的180多个线下财富中心，聚集了4万余名高净值人群。</p>
+<p>至此，海银财富的运作模式全面浮出水面。在销售端，海银依靠分布于90余个城市的180多个线下财富中心，聚集了四万余名高净值人群。</p>
 <p>海银财富爆雷，造成逾4.6万名投资者的700多亿元打了水漂，令投资界人心惶惶。学者和民众对此纷纷发表评论。</p>
 <p>认证为清华大学经济学副教授的韩秀云6月3日晚发视频表示，海银716亿资金蒸发，4.66万名投资者受害，人均被收割了154万元，他们的钱都不翼而飞了。</p>
 <p>她说，该爆雷事件暴露了几个问题：第一，海银等理财产品是谁在监管？海银产品是通过伪金交所备案登记的。它绕开了所有程序流入市场，四百多只理财产品全数违规。海银爆雷涉及伪金交所高达15家。如果伪金交所泛滥，理财产品随便上市募资，那么中国金融产品的信誉何在？百姓谁还敢买理财产品？</p>
-<p>第二，独立财富管理公司为何频频爆雷？除了海银财富外，2019年，诺亚财富爆雷涉案数十亿元，牵涉800多名投资者。2023年8月，中融信托爆雷涉案数亿元，牵涉数千名投资者。2023年11月，最大的中植系爆雷涉案3.72万亿元，牵涉15万名投资者。2024年初，鼎益丰爆雷涉案金额达1300亿元，牵涉50万投资者。财富管理公司自身就成了最大的风险。</p>
+<p>第二，独立财富管理公司为何频频爆雷？除了海银财富外，2019年，诺亚财富爆雷涉案数十亿元，牵涉八百多名投资者。2023年8月，中融信托爆雷涉案数亿元，牵涉数千名投资者。2023年11月，最大的中植系爆雷涉案3.72万亿元，牵涉15万名投资者。2024年初，鼎益丰爆雷涉案金额达1300亿元，牵涉50万投资者。财富管理公司自身就成了最大的风险。</p>
 <p>韩秀云说，一系列公司爆雷，套路大同小异，都是庞氏骗局，上当受骗的投资者中不乏富人和中产。很多人几十万、几百万往里投。</p>
 <p>对于《证劵时报》的调查结果，有许多投资人质问，为什么这么一个弄虚作假的企业可以在中国各地风生水起，做到行业前三的规模？又为什么贩售的理财产品崩盘了之后才说违规，崩盘之前怎么就合情合理合法呢？是谁批审的？目的又是为什么？</p>
 <p>更有人质疑，地产集团爆雷了，投资人血本无归；财富管理集团爆雷了，投资人血本无归；股票爆雷了，投资人血本无归。“不知道监管机构到底是怎么监管的，个个都是爆雷之后一地鸡毛，他们怎么好意思坐在那个位置上？”</p>
 <p>责任编辑：林琮文#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263597.md#1">怕洪灾？三中全会或7月上中旬召开</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263468.md#1">纪念六四 赖清德：努力让历史记忆长存人心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263404.md#1">【远见快评】总参统计的六四遇难者数据惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263483.md#1">六四周年 天安门城楼全天关闭 社媒禁换头像</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议结束？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308477.md#1">【时事金扫描】乌军装甲部队攻入俄罗斯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308285.md#1">【菁英论坛】经济恶化 国务院出台自相矛盾政策</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308455.md#1">【新闻欣视角】奥瑞只是冰山一角 央企涉案 黑幕惊人</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/11/n11646873.md#1" target="_blank">中共暴政录：最奇葩的战争——战胜国送出国土</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/4/n10829782.md#1" target="_blank">许茹：十月逾五十次地震 天象示警情势危</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258188.md#1">摄生高人孙思邈的神通与道行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254177.md#1">【古道人生】命中利北不利南 在南方一试难中 在北方则隆隆直上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/7/n14243167.md#1">为何吃降压药仍中风？中医5策略帮你自然降血压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263329.md#1">【秦鹏观察】共军少将被网民骂惨 六四吓坏中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262401.md#1">【时事军事】三次大战有多远 看俄乌冲突升级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260428.md#1">Costco高级会员资格四大缺点 鲜为人知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262233.md#1">英伟达CEO黄仁勋言论 令五毛炸锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262641.md#1">美国航母遭袭击？ 中共官媒传谣被打脸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262423.md#1">《沙丘2》2024目前最卖座 导演却失望 盼被取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262219.md#1">汤唯晒与孔刘合照 粉丝惊喜直呼画面美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262195.md#1">“那英跑调”登热搜榜第一 《歌手5》大洗牌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263337.md#1">《庆余年2》又现穿帮镜头 屋顶有智能手机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262237.md#1">布鲁斯?威利患失智症 息影逾2年近况曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257411.md#1">老化导致头发脱落、变白 7种营养素让头发回春</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259422.md#1">【一箪食】玫瑰豆腐乳煎鸡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262341.md#1">绿叶蔬菜保存 简单4诀窍延长保鲜期</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258609.md#1">西葫芦：夏季餐桌上的清新之选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262121.md#1">【美食天堂】鲜虾春卷做法～酥脆好吃！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308427.md#1">【漂流传奇】私房菜厨师：英国市集创业大公开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306785.md#1">Costco再次打击非会员 这次是在入口处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306829.md#1">陈梦战胜孙颖莎 球迷喝倒彩 背后黑幕重重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/4/n14263630.htm">海银财富爆雷716亿资金蒸发 学者：监管何在</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263630.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
